# thoughtpocket

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro  release.keystore
app/src/androidTest/assets/: corpus.json  queries.json  speech16k.pcm
app/src/androidTest/assets/longform/: eisenhower_farewell.txt
app/src/androidTest/java/com/soundscript/: ComplexQueryTest.kt  GeckoSpike.kt  InteractSpike.kt  MarkdownSpike.kt  ScaleTest.kt  ScrollPerfTest.kt  TagSpike.kt  TaggingBenchmark.kt  UiSmokeTest.kt
app/src/androidTest/java/com/thoughtpocket/: Bench.kt  CoderAcceptanceBench.kt  CoderBench.kt  CoderCtxCheck.kt  CoderHardBench.kt  CoderLoopSpike.kt  CoderMetaSpike.kt  CoderPySpike.kt  CoderUiSmokeTest.kt  ComplexQueryTest.kt  GeckoSpike.kt  GermanLangCheck.kt  InteractSpike.kt  LlamaProbeBench.kt  LongFormBench.kt  MarkdownSpike.kt  MoonshineBench.kt  MoonshineDownloadTest.kt  MoonshineEngineTest.kt  QueueCardRenderCheck.kt  QueueUiCheck.kt  ScaleTest.kt  ScrollPerfTest.kt  SherpaBench.kt  TagSpike.kt  TaggingBenchmark.kt  TransformSpike.kt  UiSmokeTest.kt  WavImportCheck.kt  WhisperSegmentSpike.kt  WhisperSkewCheck.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: llama_jni.cpp  llama_probe.cpp  whisper_jni.cpp
app/src/main/kotlin/com/soundscript/: AppPreferences.kt  Export.kt  ModelManager.kt  SoundScriptApp.kt  WhisperEngine.kt
app/src/main/kotlin/com/soundscript/ai/: ChecklistQuery.kt  Embedder.kt  InteractEngine.kt  LlmEngine.kt  MarkdownEngine.kt  MarkdownOps.kt  ReminderEngine.kt
app/src/main/kotlin/com/soundscript/audio/: MicRecorder.kt  Pcm.kt
app/src/main/kotlin/com/soundscript/data/: Note.kt
app/src/main/kotlin/com/soundscript/service/: Notifications.kt  PermissionActivity.kt  RecordState.kt  RecordTileService.kt  RecordingService.kt
app/src/main/kotlin/com/soundscript/ui/: AnalyzeScreen.kt  MainActivity.kt  MarkdownView.kt  NotesScreens.kt  SettingsScreen.kt
app/src/main/kotlin/com/soundscript/ui/theme/: Reach.kt  Theme.kt  Type.kt
app/src/main/kotlin/com/soundscript/widget/: RecordWidget.kt
app/src/main/kotlin/com/thoughtpocket/: AppPreferences.kt  CoderModelManager.kt  Export.kt  LlamaProbe.kt  ModelDownloads.kt  ModelManager.kt  NoteFile.kt  NotesFolderIo.kt  NotesFolderSync.kt  ThoughtPocketApp.kt  TranscriptionEngine.kt  Wer.kt  WhisperEngine.kt
app/src/main/kotlin/com/thoughtpocket/ai/: AiMutex.kt  ChecklistQuery.kt  Embedder.kt  InteractEngine.kt  LlmEngine.kt  LlmHarness.kt  MarkdownEngine.kt  MarkdownOps.kt  ReminderEngine.kt  TimeWindow.kt  TransformEngine.kt
app/src/main/kotlin/com/thoughtpocket/ai/coder/: CoderEngine.kt  CoderHarness.kt  LlamaEngine.kt
app/src/main/kotlin/com/thoughtpocket/audio/: AudioFiles.kt  MicRecorder.kt  Pcm.kt
app/src/main/kotlin/com/thoughtpocket/coder/: PyRunnerClient.kt  PyRunnerService.kt
app/src/main/kotlin/com/thoughtpocket/data/: CodeRun.kt  Note.kt
app/src/main/kotlin/com/thoughtpocket/service/: CodeRunState.kt  CoderRunService.kt  DownloadService.kt  Notifications.kt  PermissionActivity.kt  RecordState.kt  RecordTileService.kt  RecordingService.kt
app/src/main/kotlin/com/thoughtpocket/ui/: AnalyzeScreen.kt  CodeRunScreen.kt  MainActivity.kt  MarkdownView.kt  NotesScreens.kt  SettingsScreen.kt
app/src/main/kotlin/com/thoughtpocket/ui/theme/: Reach.kt  Theme.kt  Type.kt
app/src/main/kotlin/com/thoughtpocket/widget/: RecordWidget.kt
app/src/main/python/: runner.py
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notify.xml  widget_bg.xml
app/src/main/res/layout/: widget_record.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: widget_record_info.xml
app/src/test/java/com/soundscript/: ExportTest.kt  MarkdownToggleTest.kt  PcmTest.kt  ReminderEngineTest.kt
app/src/test/java/com/thoughtpocket/: AudioToMonoTest.kt  ChecklistQueryTest.kt  ClustersTest.kt  CodeFenceTest.kt  CoderModelManagerTest.kt  CoderPromptTest.kt  ConvertersTest.kt  EmbedderTest.kt  ExportTest.kt  HarnessDecideTest.kt  ImportScanTest.kt  InteractEngineTest.kt  LlmHarnessTest.kt  MarkdownEngineTest.kt  MarkdownParseTest.kt  MarkdownToggleTest.kt  MergeTranscriptTest.kt  NoteFileTest.kt  NotesAnalysisTest.kt  NotesFolderSyncTest.kt  PcmTest.kt  RecordingPreviewTest.kt  ReminderEngineTest.kt  TimeWindowTest.kt  TracebackSummaryTest.kt  TransformEngineTest.kt  TwoPassMigrationTest.kt  WerTest.kt  WhisperTextTest.kt
docs/: custom-vocabulary-plan.md  session-stats-plan.md  streaming-transcript-plan.md  transcription-baseline.md  transform-presets-plan.md
tools/: copy-edge-model.sh  embedding-ab-results.md  fetch-bench-audio.sh  gen_corpus.py  push-bench.sh  push-models.sh  run-scaletest.sh
tools/release/: expected-signing-cert.sha256
